--- a/BlogTravelWebApp/src/index.html
+++ b/BlogTravelWebApp/src/index.html
@@ -5,6 +5,7 @@
   <title>BlogTravelWebApp</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.4/css/froala_editor.pkgd.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
