--- a/BlogTravelWebApp/src/index.html
+++ b/BlogTravelWebApp/src/index.html
@@ -12,8 +12,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.4/js/froala_editor.pkgd.min.js"></script>
-
-  
+  <script type="text/javascript" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10"></script>  
 </head>
 <body>
   <app-root></app-root>
