--- a/BlogTravelWebApp/src/index.html
+++ b/BlogTravelWebApp/src/index.html
@@ -10,9 +10,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.4/js/froala_editor.pkgd.min.js"></script>  
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
